# joborchestrator

./: .env.example  .gitignore  INTEGRATION_GUIDE.md  PLAN.md  PORTAL_SCANNER.md  README.md  TIER1_FEATURES.md  VERCEL_DEPLOYMENT.md  VERIFICATION.md  app.py  archetype_detector.py  candidate_profile.example.yml  candidate_profile.yml  eslint.config.mjs  jobscrapping.py  package-lock.json  package.json  persistence.py  portals.yml  providers.py  pyproject.toml  repost_detector.py  requirements.txt  run_api.bat  run_app.bat  run_ranking_worker.bat  run_worker.bat  run_workers.bat  scan_core.py  scan_portals.py  test_career_ops_features.py  test_scanner.py  test_tier1_features.py  trust_validator.py  vercel.json
api/: index.py
app/: globals.css  layout.tsx
components/: app-shell.tsx  badges.tsx  dashboard-charts.tsx  job-card.tsx  job-compact-card.tsx  job-detail-drawer.tsx  job-row.tsx  kpi-card.tsx  page-chrome.tsx
config/: autoloop_config.json  autoloop_known_hard_cases.json  autoloop_state.example.json
dashboard/: package.json
docs/: APPLICATION_AUTOMATION.md  AUTOLOOP_USAGE.md  AUTOMATION_SAFETY.md  CURRENT_ARCHITECTURE.md  LLM_TRUST_COMPLIANCE_MATRIX.md  LLM_TRUST_DEFINITION_OF_DONE.md  LLM_TRUST_PROGRESS_REVIEW_FOR_CLAUDE.md  RANKING_AND_PRIORITY.md  REMAINING_GAPS.md  RUNBOOK.md
extension/: README.md  manifest.json
joborchestrator/: __init__.py  api.py  api_dto.py  application_sessions.py  batching.py  env.py  paths.py  priority.py  profile_skill_catalog.py  prompts.py  worker.py
lib/: api.ts  job-ui.ts  nav.ts  stats.ts  store.tsx  types.ts
(+237 files in other folders)
